<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AdminHome"
    android:id="@+id/drawerlayout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:theme="@style/navigationTheme"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu_admin"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/menu_icone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_menu"/>

            <ImageView
                android:id="@+id/add_categ"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/add_icon"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:background="@color/banner_background"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/logo_name"
                    android:textSize="28sp" />



            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card1"
                        android:elevation="8dp">

                        <ImageView
                            android:id="@+id/link_hotel"
                            android:layout_width="70dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/hotel" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/hotels"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card2"
                        android:elevation="8dp">

                        <ImageView
                            android:id="@+id/link_resto"
                            android:layout_width="70dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/restaurant_icon" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/restaurants"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card3"
                        android:elevation="8dp">

                        <ImageView
                            android:id="@+id/link_residence"
                            android:layout_width="70dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/resident" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/residences"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card4"
                        android:elevation="8dp">

                        <ImageView
                            android:id="@+id/link_car"
                            android:layout_width="70dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/car_icon" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/vehicules"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>






        </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>